# codetool-lab-fable5

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  merge-on-green.yml
control/: inbox.md  status.md
docs/: ROADMAP.md  _merge_verification_2026-07-15.md
docs/audits/: 2026-07-13-fleet-cleanup-audit.md
docs/retro/: ping-ack.md  project-review-2026-07-09.md  self-review-2026-07-09.md  wind-down-review-2026-07-09.md
docs/succession/: ENVIRONMENT.md  NEXT-BOOT.md  PLATFORM-LIMITS.md  custom-instructions-proposal.md  gen2-feedback.md
scripts/: env-setup.sh
src/envdrift/: __init__.py  cli.py  parser.py
src/envdrift/commands/: __init__.py  check.py  diff.py  example.py  lint.py  sync.py
tests/: test_check.py  test_cli.py  test_corpus.py  test_diff.py  test_example.py  test_lint.py  test_parser.py  test_sync.py
