[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "envdrift"
version = "0.1.0"
description = "Keep your .env files honest: detect drift between .env and .env.example."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "menno420" }]
keywords = ["dotenv", "env", "drift", "lint", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/menno420/codetool-lab-fable5"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
envdrift = "envdrift.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/envdrift"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
